[project]
name = "example-simple-package"
version = "0.0.0"

[tool.pysen.lint]
enable_black = true
enable_mypy = true
mypy_preset = "strict"
line_length = 100
py_version = "py38"
mypy_exclude = '''(?x)(
  excluded1\.py
  | excluded2\.py
)'''  # see https://mypy.readthedocs.io/en/stable/config_file.html#confval-exclude for details


[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
